# mcp-blackboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/scripts/: add-dependencies.sh  add-pre-commit-hooks.sh
.github/workflows/: ci-checks.yaml
infra/azure/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py
infra/azure/modules/: ai.py  cache.py  common.py  models.py  network.py  storage.py
samples/: _task.yml  env-sample.txt  plan.json
src/: common.py  config.yml.j2  main.py  models.py  server.py  tools.py
src/config/: template.yml.j2
src/tools/: context.py  memory.py
tests/: conftest.py  test_common.py  test_context.py  test_main.py  test_memory.py  test_models.py  test_server.py
